--- a/.github/workflows/example_workflow.yaml
+++ b/.github/workflows/example_workflow.yaml
@@ -14,6 +14,6 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add README.md
+          git add readme.md
           git commit -m "Updated Table Of Contents"
           git push
