--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "eslint": "^8.56.0",
-    "nodemon": "^3.0.3",
+    "nodemon": "^3.0.3"
   },
   "directories": {
     "doc": "docs"
