--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "typescript": "^5.3.3",
     "ts-node": "^10.9.2"
   },
-  "description": "Last updated: 2022-03-18 15:23:06",
+  "description": "",
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
     "@types/luxon": "^3.4.2",
