--- a/.github/workflows/docs-to-master.yml
+++ b/.github/workflows/docs-to-master.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Configure Git
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
+          git config --local user.name "GitHub Actions Bot"
 
       - name: Commit changes
         run: |
